--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div class="container">
     <div class="card">
-        <img src="../qr-code-component-main/images/image-qr-code.png" alt="QR Code Image" id="QRimage">
+        <img src="./image-qr-code.png" alt="QR Code Image" id="QRimage">
         <p id="boldP">Improve your front-end skills by building projects
         </p>
         <p id="normalP">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
